# KieContext

./: CMakeLists.txt  README.md  conanfile.py  doxygen.conf
include/: kie_context.hpp
test/: CMakeLists.txt  kie_context_test.cpp
